--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
     <title>Verti Example</title>
 </head>
 <body>
-<h1>Verti</h1>
-<button>
-    <i class="fas fa-arrow-circle-right">Ok let's go</i>
-    <i class="fas fa-question-circle">More info</i>
-</button>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <h2>Verti</h2>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li class="menu_item menu_item_active">Welcome</li>
+                    <li class="menu_item">Dropdown</li>
+                    <li class="menu_item">Left Sidebar</li>
+                    <li class="menu_item">Right Sidebar</li>
+                    <li class="menu_item">No Sidebar</li>
+                </ul>
+            </nav>
+        </header>
+        <div class="welcome">
+            <div class="welcome_text">
+                <h1 class="title">Hi. This is Verti.</h1>
+                <h2 class="subtitle">It's a free responsive site template by HTML5 UP</h2>
+            </div>
+            <div class="welcome_buttons">
+                <button class="button button-primary">
+                    <i class="fas fa-arrow-circle-right"></i>
+                    <span>Ok let's go</span>
+                </button>
+                <button class="button button-secondary">
+                    <i class="fas fa-question-circle"></i>
+                    <span>More info</span>
+                </button>
+            </div>
+        </div>
+        <section class="portfolio">
+            <article class="portfolio__item">
+                <div class="portfolio__item__thumbnail">
+                    <img scr=verti-example/assets/pic01.jpg">
+                </div>
+                <header class="portfolio__item__header">
+                    <h3>An interesting title</h3>
+                    <h4>This is also an interesting subtitle</h4>
+                </header>
+                <p class="portfolio__item__description">
+                    Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.
+                </p>
+            </article>
+        </section>
+    </div>
+
+
+
 </body>
 </html>
